objects/PartsConfig__c/PartsConfig__c.object-meta.xml
<CustomObject>
    <label>PartsConfig</label>
    <nameField>
        <displayFormat>PRT-{00000}</displayFormat>
        <label>Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PartsConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>