objects/PartsConfig__c/fields/Call_out__c.field-meta.xml
<CustomField>
    <fullName>Call_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call out</label>
    <type>Checkbox</type>
</CustomField>