objects/PartsConfig__c/fields/Congestion__c.field-meta.xml
<CustomField>
    <fullName>Congestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congestion</label>
    <type>Checkbox</type>
</CustomField>