objects/PartsConfig__c/fields/isDefaultProduct__c.field-meta.xml
<CustomField>
    <fullName>isDefaultProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefaultProduct</label>
    <type>Checkbox</type>
</CustomField>