objects/PartsConfig__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking</label>
    <type>Checkbox</type>
</CustomField>