objects/PartsConfig__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PartsConfig</relationshipLabel>
    <relationshipName>PartsConfig</relationshipName>
    <type>Lookup</type>
</CustomField>