objects/PartsConfig__c/fields/Reactive__c.field-meta.xml
<CustomField>
    <fullName>Reactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactive</label>
    <type>Checkbox</type>
</CustomField>