objects/PartsConfig__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Compressor Service and Test Report</fullName>
            </value>
            <value>
                <fullName>All Service</fullName>
            </value>
            <value>
                <fullName>Getinge Autoclave</fullName>
            </value>
            <value>
                <fullName>Getinge Washer Disinfector</fullName>
            </value>
            <value>
                <fullName>Mechanical X-Ray Report</fullName>
            </value>
            <value>
                <fullName>Medisafe Washer disinfector service</fullName>
            </value>
            <value>
                <fullName>Reactive Sheet</fullName>
            </value>
            <value>
                <fullName>Report of Examination</fullName>
            </value>
            <value>
                <fullName>Suction Pump Service</fullName>
            </value>
            <value>
                <fullName>Treatment Centre Certificate Of Service</fullName>
            </value>
            <value>
                <fullName>Zone A Region</fullName>
            </value>
            <value>
                <fullName>Zone B Region</fullName>
            </value>
            <value>
                <fullName>Zone C Region</fullName>
            </value>
            <value>
                <fullName>Zone D Region</fullName>
            </value>
            <value>
                <fullName>Standard Price Book</fullName>
            </value>
            <value>
                <fullName>Storm Water Pump</fullName>
            </value>
            <value>
                <fullName>Special Rate Agreed</fullName>
            </value>
            <value>
                <fullName>Hospital rates</fullName>
            </value>
            <value>
                <fullName>Pan Oral X-ray</fullName>
            </value>
            <value>
                <fullName>Image Plate Scanner Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>