objects/PartsConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isDefaultProduct__c</columns>
    <columns>Call_out__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Reactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>